--- a/package.json
+++ b/package.json
@@ -14,50 +14,53 @@
         "studio": "bunx drizzle-kit studio"
     },
     "dependencies": {
-        "@hookform/resolvers": "^3.6.0",
+        "@hookform/resolvers": "^3.9.0",
         "@lucia-auth/adapter-drizzle": "^1.0.7",
-        "@million/lint": "^1.0.0-rc.26",
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@million/lint": "^1.0.0-rc.80",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@typescript-eslint/eslint-plugin": "^7.13.0",
-        "@typescript-eslint/parser": "^7.13.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@serwist/next": "^9.0.3",
+        "@typescript-eslint/eslint-plugin": "^7.16.0",
+        "@typescript-eslint/parser": "^7.16.0",
         "@vercel/postgres": "^0.8.0",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "drizzle-orm": "^0.31.2",
+        "drizzle-orm": "^0.31.4",
         "eslint-plugin-drizzle": "^0.2.3",
-        "framer-motion": "^11.2.10",
+        "framer-motion": "^11.3.2",
         "lucia": "^3.2.0",
         "lucide-react": "^0.394.0",
         "next": "14.2.3",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-hook-form": "^7.52.0",
+        "react-hook-form": "^7.52.1",
         "sonner": "^1.5.0",
-        "tailwind-merge": "^2.3.0",
+        "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/node": "^20.14.2",
+        "@types/node": "^20.14.10",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "drizzle-kit": "^0.22.7",
+        "drizzle-kit": "^0.22.8",
         "eslint": "^8.57.0",
         "eslint-config-next": "14.2.3",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-tailwindcss": "^3.17.3",
-        "postcss": "^8.4.38",
-        "prettier": "^3.3.2",
-        "prettier-plugin-tailwindcss": "^0.6.4",
+        "eslint-plugin-tailwindcss": "^3.17.4",
+        "postcss": "^8.4.39",
+        "prettier": "^3.3.3",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "serwist": "^9.0.3",
         "tailwindcss": "^3.4.4",
-        "typescript": "^5.4.5"
-    }
+        "typescript": "^5.5.3"
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
