--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@hookform/resolvers": "^3.9.0",
         "@lucia-auth/adapter-drizzle": "^1.0.7",
         "@million/lint": "^1.0.0-rc.81",
+        "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
