--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.52.1",
+        "react-signature-canvas": "^1.0.6",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
@@ -50,6 +51,7 @@
         "@types/node": "^20.14.11",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/react-signature-canvas": "^1.0.5",
         "drizzle-kit": "^0.23.0",
         "eslint": "^9.7.0",
         "eslint-config-next": "14.2.5",
