--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
         "**/Thumbs.db": true,
         "**/node_modules": true
     },
-    "cSpell.words": ["Unitech"]
+    "cSpell.words": ["Unitech"],
+    "pieces.cloudCapabilities": "Blended",
+    "pieces.telemetry": true
 }
