--- a/package.json
+++ b/package.json
@@ -15,56 +15,62 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
-        "@lucia-auth/adapter-drizzle": "^1.0.7",
+        "@lucia-auth/adapter-drizzle": "^1.1.0",
         "@million/lint": "^1.0.0-rc.84",
         "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.1",
         "@radix-ui/react-select": "^2.1.1",
+        "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
-        "@serwist/next": "^9.0.5",
-        "@typescript-eslint/eslint-plugin": "^8.0.0",
-        "@typescript-eslint/parser": "^8.0.0",
-        "@vercel/postgres": "^0.9.0",
+        "@radix-ui/react-tabs": "^1.1.0",
+        "@serwist/next": "^9.0.8",
+        "@typescript-eslint/eslint-plugin": "^8.6.0",
+        "@typescript-eslint/parser": "^8.6.0",
+        "@vercel/postgres": "^0.10.0",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "drizzle-orm": "^0.32.1",
+        "date-fns": "^4.1.0",
+        "drizzle-orm": "^0.33.0",
         "eslint-plugin-drizzle": "^0.2.3",
-        "framer-motion": "^11.3.19",
+        "framer-motion": "^11.5.6",
+        "lodash": "^4.17.21",
         "lucia": "^3.2.0",
-        "lucide-react": "^0.418.0",
-        "next": "14.2.5",
+        "lucide-react": "^0.441.0",
+        "next": "14.2.13",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
+        "react-day-picker": "8.10.1",
         "react-dom": "^18.3.1",
-        "react-hook-form": "^7.52.1",
+        "react-hook-form": "^7.53.0",
         "react-signature-canvas": "^1.0.6",
         "sonner": "^1.5.0",
-        "tailwind-merge": "^2.4.0",
+        "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/node": "^22.0.2",
-        "@types/react": "^18.3.3",
+        "@types/lodash": "^4.17.7",
+        "@types/node": "^22.5.5",
+        "@types/react": "^18.3.8",
         "@types/react-dom": "^18.3.0",
         "@types/react-signature-canvas": "^1.0.5",
-        "drizzle-kit": "^0.23.1",
-        "eslint": "^9.8.0",
-        "eslint-config-next": "14.2.5",
+        "drizzle-kit": "^0.24.2",
+        "eslint": "^9.10.0",
+        "eslint-config-next": "14.2.13",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-import": "^2.30.0",
         "eslint-plugin-tailwindcss": "^3.17.4",
-        "postcss": "^8.4.40",
+        "postcss": "^8.4.47",
         "prettier": "^3.3.3",
-        "prettier-plugin-tailwindcss": "^0.6.5",
-        "serwist": "^9.0.5",
-        "tailwindcss": "^3.4.7",
-        "typescript": "^5.5.4"
-    },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+        "prettier-plugin-tailwindcss": "^0.6.6",
+        "serwist": "^9.0.8",
+        "tailwindcss": "^3.4.12",
+        "typescript": "^5.6.2"
+    }
 }
