--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
         "@serwist/next": "^9.0.8",
-        "@typescript-eslint/eslint-plugin": "^8.6.0",
-        "@typescript-eslint/parser": "^8.6.0",
+        "@typescript-eslint/eslint-plugin": "^8.7.0",
+        "@typescript-eslint/parser": "^8.7.0",
         "@vercel/postgres": "^0.10.0",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
@@ -37,14 +38,14 @@
         "date-fns": "^4.1.0",
         "drizzle-orm": "^0.33.0",
         "eslint-plugin-drizzle": "^0.2.3",
-        "framer-motion": "^11.5.6",
+        "framer-motion": "^11.7.0",
         "lodash": "^4.17.21",
         "lucia": "^3.2.0",
-        "lucide-react": "^0.441.0",
+        "lucide-react": "^0.446.0",
         "next": "14.2.13",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
-        "react-day-picker": "8.10.1",
+        "react-day-picker": "9.1.2",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.0",
         "react-signature-canvas": "^1.0.6",
@@ -55,22 +56,22 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/lodash": "^4.17.7",
-        "@types/node": "^22.5.5",
-        "@types/react": "^18.3.8",
+        "@types/lodash": "^4.17.9",
+        "@types/node": "^22.7.2",
+        "@types/react": "^18.3.9",
         "@types/react-dom": "^18.3.0",
-        "@types/react-signature-canvas": "^1.0.5",
+        "@types/react-signature-canvas": "^1.0.6",
         "drizzle-kit": "^0.24.2",
-        "eslint": "^9.10.0",
+        "eslint": "^9.11.1",
         "eslint-config-next": "14.2.13",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.30.0",
         "eslint-plugin-tailwindcss": "^3.17.4",
         "postcss": "^8.4.47",
         "prettier": "^3.3.3",
-        "prettier-plugin-tailwindcss": "^0.6.6",
+        "prettier-plugin-tailwindcss": "^0.6.8",
         "serwist": "^9.0.8",
-        "tailwindcss": "^3.4.12",
+        "tailwindcss": "^3.4.13",
         "typescript": "^5.6.2"
     }
 }
