--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@million/lint": "^1.0.0-rc.84",
         "@radix-ui/react-alert-dialog": "^1.1.1",
         "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
@@ -45,7 +46,7 @@
         "next": "14.2.13",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
-        "react-day-picker": "9.1.2",
+        "react-day-picker": "8.10.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.0",
         "react-signature-canvas": "^1.0.6",
