--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
         "@lucia-auth/adapter-drizzle": "^1.1.0",
-        "@million/lint": "^1.0.0-rc.84",
-        "@radix-ui/react-alert-dialog": "^1.1.1",
-        "@radix-ui/react-avatar": "^1.1.0",
-        "@radix-ui/react-checkbox": "^1.1.1",
-        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@million/lint": "^1.0.9",
+        "@radix-ui/react-alert-dialog": "^1.1.2",
+        "@radix-ui/react-avatar": "^1.1.1",
+        "@radix-ui/react-checkbox": "^1.1.2",
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-popover": "^1.1.1",
-        "@radix-ui/react-select": "^2.1.1",
+        "@radix-ui/react-popover": "^1.1.2",
+        "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-switch": "^1.1.0",
-        "@radix-ui/react-tabs": "^1.1.0",
-        "@serwist/next": "^9.0.8",
-        "@typescript-eslint/eslint-plugin": "^8.7.0",
-        "@typescript-eslint/parser": "^8.7.0",
+        "@radix-ui/react-switch": "^1.1.1",
+        "@radix-ui/react-tabs": "^1.1.1",
+        "@serwist/next": "^9.0.9",
+        "@typescript-eslint/eslint-plugin": "^8.8.1",
+        "@typescript-eslint/parser": "^8.8.1",
         "@vercel/postgres": "^0.10.0",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
-        "drizzle-orm": "^0.33.0",
+        "drizzle-orm": "^0.34.1",
         "eslint-plugin-drizzle": "^0.2.3",
-        "framer-motion": "^11.7.0",
+        "framer-motion": "^11.11.8",
         "lodash": "^4.17.21",
-        "lucia": "^3.2.0",
-        "lucide-react": "^0.446.0",
-        "next": "14.2.13",
+        "lucia": "^3.2.1",
+        "lucide-react": "^0.452.0",
+        "next": "14.2.15",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
         "react-day-picker": "8.10.1",
@@ -51,28 +51,28 @@
         "react-hook-form": "^7.53.0",
         "react-signature-canvas": "^1.0.6",
         "sonner": "^1.5.0",
-        "tailwind-merge": "^2.5.2",
+        "tailwind-merge": "^2.5.3",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/lodash": "^4.17.9",
-        "@types/node": "^22.7.2",
-        "@types/react": "^18.3.9",
-        "@types/react-dom": "^18.3.0",
+        "@types/lodash": "^4.17.10",
+        "@types/node": "^22.7.5",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.1",
         "@types/react-signature-canvas": "^1.0.6",
-        "drizzle-kit": "^0.24.2",
-        "eslint": "^9.11.1",
-        "eslint-config-next": "14.2.13",
+        "drizzle-kit": "^0.25.0",
+        "eslint": "^9.12.0",
+        "eslint-config-next": "14.2.15",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.30.0",
-        "eslint-plugin-tailwindcss": "^3.17.4",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-tailwindcss": "^3.17.5",
         "postcss": "^8.4.47",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.8",
-        "serwist": "^9.0.8",
+        "serwist": "^9.0.9",
         "tailwindcss": "^3.4.13",
-        "typescript": "^5.6.2"
+        "typescript": "^5.6.3"
     }
 }
