--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
         "@lucia-auth/adapter-drizzle": "^1.1.0",
-        "@million/lint": "^1.0.9",
+        "@million/lint": "^1.0.11",
         "@radix-ui/react-alert-dialog": "^1.1.2",
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-checkbox": "^1.1.2",
@@ -30,8 +30,8 @@
         "@radix-ui/react-switch": "^1.1.1",
         "@radix-ui/react-tabs": "^1.1.1",
         "@serwist/next": "^9.0.9",
-        "@typescript-eslint/eslint-plugin": "^8.8.1",
-        "@typescript-eslint/parser": "^8.8.1",
+        "@typescript-eslint/eslint-plugin": "^8.11.0",
+        "@typescript-eslint/parser": "^8.11.0",
         "@vercel/postgres": "^0.10.0",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
@@ -39,32 +39,32 @@
         "date-fns": "^4.1.0",
         "drizzle-orm": "^0.34.1",
         "eslint-plugin-drizzle": "^0.2.3",
-        "framer-motion": "^11.11.8",
+        "framer-motion": "^11.11.9",
         "lodash": "^4.17.21",
-        "lucia": "^3.2.1",
-        "lucide-react": "^0.452.0",
-        "next": "14.2.15",
+        "lucia": "^3.2.2",
+        "lucide-react": "^0.453.0",
+        "next": "15.0.0",
         "next-themes": "^0.3.0",
-        "react": "^18.3.1",
-        "react-day-picker": "9.1.3",
-        "react-dom": "^18.3.1",
-        "react-hook-form": "^7.53.0",
+        "react": "19.0.0-rc-65a56d0e-20241020",
+        "react-day-picker": "9.1.4",
+        "react-dom": "19.0.0-rc-65a56d0e-20241020",
+        "react-hook-form": "^7.53.1",
         "react-signature-canvas": "^1.0.6",
         "sonner": "^1.5.0",
-        "tailwind-merge": "^2.5.3",
+        "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/lodash": "^4.17.10",
-        "@types/node": "^22.7.5",
-        "@types/react": "^18.3.11",
-        "@types/react-dom": "^18.3.1",
+        "@types/lodash": "^4.17.12",
+        "@types/node": "^22.7.8",
+        "@types/react": "npm:types-react@19.0.0-rc.1",
+        "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
         "@types/react-signature-canvas": "^1.0.6",
         "drizzle-kit": "^0.25.0",
-        "eslint": "^9.12.0",
-        "eslint-config-next": "14.2.15",
+        "eslint": "^9.13.0",
+        "eslint-config-next": "15.0.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-tailwindcss": "^3.17.5",
@@ -72,7 +72,11 @@
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.8",
         "serwist": "^9.0.9",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.14",
         "typescript": "^5.6.3"
+    },
+    "overrides": {
+        "@types/react": "npm:types-react@19.0.0-rc.1",
+        "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
     }
 }
