--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,15 @@
         "paths": {
             "@/*": ["./*"]
         },
-        "types": ["@serwist/next/typings"]
+        "types": ["@serwist/next/typings"],
+        "target": "ES2017"
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "app/dashboard/[id]/(buttons)/ArchibeButton.tss"
+    ],
     "exclude": ["node_modules", "public/sw.js"]
 }
