--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --turbo",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -33,21 +33,22 @@
         "@typescript-eslint/eslint-plugin": "^8.11.0",
         "@typescript-eslint/parser": "^8.11.0",
         "@vercel/postgres": "^0.10.0",
+        "babel-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
-        "drizzle-orm": "^0.34.1",
+        "drizzle-orm": "^0.35.3",
         "eslint-plugin-drizzle": "^0.2.3",
-        "framer-motion": "^11.11.9",
+        "framer-motion": "^11.11.10",
         "lodash": "^4.17.21",
         "lucia": "^3.2.2",
         "lucide-react": "^0.453.0",
-        "next": "15.0.0",
+        "next": "15.0.1",
         "next-themes": "^0.3.0",
-        "react": "19.0.0-rc-65a56d0e-20241020",
-        "react-day-picker": "8.10.1",
-        "react-dom": "19.0.0-rc-65a56d0e-20241020",
+        "react": "18.3.1",
+        "react-day-picker": "9.2.1",
+        "react-dom": "18.3.1",
         "react-hook-form": "^7.53.1",
         "react-signature-canvas": "^1.0.6",
         "sonner": "^1.5.0",
@@ -58,15 +59,16 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/lodash": "^4.17.12",
-        "@types/node": "^22.7.8",
-        "@types/react": "npm:types-react@19.0.0-rc.1",
-        "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+        "@types/node": "^22.8.1",
+        "@types/react": "npm:types-react@19.0.0-alpha.3",
+        "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
         "@types/react-signature-canvas": "^1.0.6",
-        "drizzle-kit": "^0.25.0",
+        "drizzle-kit": "^0.26.2",
         "eslint": "^9.13.0",
-        "eslint-config-next": "15.0.0",
+        "eslint-config-next": "15.0.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-6fc168f-20241025",
         "eslint-plugin-tailwindcss": "^3.17.5",
         "postcss": "^8.4.47",
         "prettier": "^3.3.3",
