--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/lodash": "^4.17.12",
         "@types/node": "^22.8.1",
-        "@types/react": "npm:types-react@19.0.0-alpha.3",
+        "@types/react": "19.0.0-rc.1",
         "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
         "@types/react-signature-canvas": "^1.0.6",
         "drizzle-kit": "^0.26.2",
