--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/bcryptjs": "^2.4.6",
         "@types/lodash": "^4.17.12",
         "@types/node": "^22.8.1",
