feat(order): add paid status to order
The changes in this commit introduce a new paid status to the order schema, allowing for tracking the payment method of each order. This includes adding a new `paid` column to the `order` table in the database, as well as creating a new `PaidStatus` enum to represent the different payment statuses: `card`, `cash`, and `unpaid`.

Additionally, a new `PaidButton` component has been added to the dashboard page, which allows users to easily update the payment status of an order. This component uses an `AlertDialog` to present the user with options to mark the order as paid by card, paid by cash, or unpaid.

These changes provide more detailed information about the payment status of each order, which can be useful for tracking and reporting on the business's financial status.

--- a/.prettierrc
+++ b/.prettierrc
@@ -21,6 +21,7 @@
     "importOrderSeparation": true,
     "importOrder": [
         "react",
+        "next/(.*)$",
         "<THIRD_PARTY_MODULES>",
         "lucide-react",
 
