--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
     "singleQuote": false,
     "jsxSingleQuote": false,
     "quoteProps": "as-needed",
-    "trailingComma": "all",
+    "trailingComma": "none",
     "singleAttributePerLine": true,
     "htmlWhitespaceSensitivity": "css",
     "vueIndentScriptAndStyle": false,
