--- a/.prettierrc
+++ b/.prettierrc
@@ -40,5 +40,5 @@
 
         "^[./]"
     ],
-    "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"]
+    "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
 }
