--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,16 @@
     },
     "cSpell.words": ["Unitech"],
     "pieces.cloudCapabilities": "Blended",
-    "pieces.telemetry": true
+    "pieces.telemetry": true,
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": "keyword.other.dotenv",
+                "settings": {
+                    "foreground": "#FF000000"
+                }
+            }
+        ],
+        "comments": ""
+    }
 }
