--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "migrate": "drizzle-kit migrate",
         "seed": "bun run db/seed.ts",
         "studio": "bunx drizzle-kit studio",
-        "deploy": "bun generate && bun run build && vercel --prod"
+        "deploy": "bun generate && bun run build"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
